fix social icons on mobile

--- a/src/style/_header.scss
+++ b/src/style/_header.scss
@@ -46,8 +46,8 @@
 
 .header-social-share {
   display: inline-block;
-  width: 35px;
-  height: 35px;
+  width: 36px;
+  height: 36px;
   background-position: center center;
   background-repeat: no-repeat;
 }
